--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -9,7 +9,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="card">
                         <button type="button" class=" btn btn-block ink-reaction btn-default-bright"  data-toggle="modal" data-target="#ConservativeModal">
-                            Консервативный
+                            Консервативный 30
                         </button>
                     </div><!--end .card -->
                 </div><!--end .col -->
@@ -18,7 +18,7 @@
                 <!-- BEGIN BUTTON -->
                 <div class="col-md-3 col-sm-6">
                     <div class="card">
-                        <button type="button" class=" btn btn-block ink-reaction btn-info " data-toggle="modal" data-target="#BalancedModal" >Сбалансированный</button>
+                        <button type="button" class=" btn btn-block ink-reaction btn-info " data-toggle="modal" data-target="#BalancedModal" >Умеренный+</button>
                     </div><!--end .card -->
                 </div><!--end .col -->
                 <!-- END BUTTON -->
@@ -26,7 +26,7 @@
                 <!-- BEGIN BUTTON -->
                 <div class="col-md-3 col-sm-6">
                     <div class="card">
-                        <button type="button" class="btn btn-block ink-reaction btn-warning"  data-toggle="modal" data-target="#AggressiveModal" >Агрессивный</button>
+                        <button type="button" class="btn btn-block ink-reaction btn-warning"  data-toggle="modal" data-target="#GuaranteedModal" >Гарантированный 100</button>
                     </div><!--end .card -->
                 </div><!--end .col -->
                 <!-- END BUTTON -->
@@ -160,7 +160,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel"> Консервативный </h5>
+                    <h5 class="modal-title" id="exampleModalLabel"> Консервативный 30 </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -169,7 +169,7 @@
                     <!-- BEGIN SPINNERS -->
                     <div class="row">
                         <div class="col-lg-12">
-                            <h4>Консервативный</h4>
+                            <h4>Консервативный </h4>
                         </div><!--end .col -->
                         <div class="col-lg-3 col-md-4">
                             <article class="margin-bottom-xxl">
@@ -206,7 +206,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">     BalancedModal </h5>
+                    <h5 class="modal-title">     Умеренный+  </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -215,12 +215,12 @@
                     <!-- BEGIN SPINNERS -->
                     <div class="row">
                         <div class="col-lg-12">
-                            <h4>BalancedModal</h4>
+                            <h4>Умеренный</h4>
                         </div><!--end .col -->
                         <div class="col-lg-3 col-md-4">
                             <article class="margin-bottom-xxl">
                                 <p>
-                                    BalancedModal - это ... .... .... ... ... ...... .... .... ... ... ..., ...  ...
+                                    Умеренный - это ... .... .... ... ... ...... .... .... ... ... ..., ...  ...
                                     ... .... .... ... ... ... ,... .... .... ... ... ...,... .... .... ... ... ...
                                 </p>
                             </article>
@@ -249,11 +249,11 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="AggressiveModal" tabindex="-1" role="dialog" aria-labelledby="AggressiveModalLabel" aria-hidden="true">
+    <div class="modal fade" id="GuaranteedModal" tabindex="-1" role="dialog" aria-labelledby="AggressiveModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">     AggressiveModal </h5>
+                    <h5 class="modal-title" id="exampleModalLabel">     Guaranteed  </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -262,12 +262,12 @@
                     <!-- BEGIN SPINNERS -->
                     <div class="row">
                         <div class="col-lg-12">
-                            <h4>Агрессивный</h4>
+                            <h4>Гарантированный 100</h4>
                         </div><!--end .col -->
                         <div class="col-lg-3 col-md-4">
                             <article class="margin-bottom-xxl">
                                 <p>
-                                    Агрессивный - это ... .... .... ... ... ...... .... .... ... ... ..., ...  ...
+                                    Гарантированный  - это ... .... .... ... ... ...... .... .... ... ... ..., ...  ...
                                     ... .... .... ... ... ... ,... .... .... ... ... ...,... .... .... ... ... ...
                                 </p>
                             </article>
