--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -22,12 +22,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 p-4">
-                    <a title="консервативный" onclick="alert('консервативный портфель')" style="cursor:pointer">
+                    <a title="консервативный" style="cursor:pointer">
                         <div class="card bg-light p-4 border-0 pop-up">
                             <div class="card-block my-3"><img class="img-fluid d-block mb-3 mx-auto" src="/main/img/1.jpg"
                                                               width="70" alt="mac logo">
-                                <h3 class="mb-4"><b>Консервативный</b></h3>
-                                <p class="border border-primary mx-3 p-2 mb-0">Консервативный </p>
+                                <h3 class="mb-4"><b>Консервативный </b></h3>
+                                <p class="border border-primary mx-3 p-2 mb-0"> Консервативный 30</p>
                             </div>
                         </div>
                     </a>
@@ -37,8 +37,8 @@
                         <div class="card p-4 bg-light border-0 pop-up">
                             <div class="card-block my-3"><img class="img-fluid d-block mb-3 mx-auto" src="/main/img/2.png"
                                                               width="70" alt="windows logo">
-                                <h3 class="mb-4"><b>Сбалансированный</b></h3>
-                                <p class="border border-primary mx-3 p-2 mb-0">сбалансированный</p>
+                                <h3 class="mb-4"><b>Умеренный </b></h3>
+                                <p class="border border-primary mx-3 p-2 mb-0"> Умеренный+</p>
                             </div>
                         </div>
                     </a>
@@ -48,8 +48,8 @@
                         <div class="card p-4 bg-light border-0 pop-up">
                             <div class="card-block my-3"><img class="img-fluid d-block mb-3 mx-auto" src="/main/img/3.png"
                                                               width="70" alt="linux logo">
-                                <h3 class="mb-4"><b>Агрессивный</b></h3>
-                                <p class="border border-primary mx-3 p-2 mb-0">агрессивный </p>
+                                <h3 class="mb-4"><b> Гарантированный  </b></h3>
+                                <p class="border border-primary mx-3 p-2 mb-0"> Гарантированный 100  </p>
                             </div>
                         </div>
                     </a>
