--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,19 +1,32 @@
-{% extends 'base.html.twig' %}
+{% extends 'index/base.html.twig' %}
 
 {% block title %}404 — {% endblock %}
-{% block bodyclass %}error-404{% endblock %}
 
 {% block body %}
-    <main class="d-flex align-items-center justify-content-center flex-column">
-        <div class="container">
-            <div class="block-narrow d-flex justify-content-end">
-                <div>
-                    <h1 class="px-2 py-1 text-nowrap">ERROR 404</h1>
-                    <div class="px-2 text-white-shadowed">
-                        <a class="link link-double" href="#">back to home</a>
-                    </div>
+    <div class="text-center py-5"
+         style="background-image: url('/main/site-assets/cover_curve.jpg');background-position:center bottom;background-size:cover;">
+        <div class="container py-4 mt-4">
+            <div class="row">
+                <div class="col-md-12 text-white">
+                    <h1 class="mb-2 display-5">404</h1>
                 </div>
             </div>
         </div>
-    </main>
+    </div>
+    <div class="text-center section py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                     <h1 class="mb-2 display-5">Not Found</h1>
+                    <p class="px-2 text-white-shadowed">
+                        Something is broken.<br/>
+                        Please let us know what you were doing<br/>
+                        when this error occurred.<br/>
+                        We will fix it as soon as possible.<br/>
+                        Sorry for any inconvenience caused.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
