--- a/templates/index/howto.html.twig
+++ b/templates/index/howto.html.twig
@@ -38,7 +38,23 @@
     <div class="text-center section py-5">
         <div class="container">
 
-            Как это работает
+
+            <div class="row">
+                <div class="col-md-12 div-col-md-background">
+                    <div style="text-align:left">
+                        <p>Известная в узком кругу инвестиционная компания BigBell готова оказать финансовую помощь, которую вы искали до сегодняшнего дня.</p>
+                        <p>Новая корпоративная стратегия компании позволяет любому юридическому и физическому лицу по всему миру принимать участие в инвестиционных проектах BigBell.</p>
+                        <p>Портфель BigBell имеет различные инвестиционные проекты, чтобы Вы сами определяли собственные ожидания размера прибыли.</p>
+                        <p>Активы фонда, расположенны на ключевых позициях и распределены между секторами IT-услуг, коммерческим и финансовым рынками.</p>
+                        <p>Доходность инвестиций - не единственный пункт в списке преимуществ BigBell.</p>
+                        <p>Наша новая платформа для наших клиентов дает максимальную эффективность и максимально быструю обратную связь.</p>
+                        <p>С этого момента Вы можете озкнакомиться со всеми преимуществами использования BigBell - специально разработанного интерфейса со статистикой и расчетами в одном месте.</p>
+
+                        <p>Формируйте свою финансовую стратегию с BigBell.</p>
+                    </div>
+                </div>
+            </div>
+
 
             {#<div class="row">#}
                 {#<div class="col-md-12 div-col-md-background">#}
@@ -90,6 +106,18 @@
                 {#</div>#}
 
             </div>
-        </div>
+
+        {#<center>#}
+            {#<img src="/main/img/pamm.png" style=" width: 200px; ">#}
+        {#</center>#}
+
+
     </div>
+
+
+
+
+    </div>
+
+
 {% endblock %}
