--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -26,7 +26,7 @@
                 <!-- BEGIN BUTTON -->
                 <div class="col-md-3 col-sm-6">
                     <div class="card">
-                        <button type="button" class="btn btn-block ink-reaction btn-warning"  data-toggle="modal" data-target="#GuaranteedModal" >Гарантированный 100</button>
+                        <button type="button" class="btn btn-block ink-reaction btn-warning"  data-toggle="modal" data-target="#GuaranteedModal" >IPO </button>
                     </div><!--end .card -->
                 </div><!--end .col -->
                 <!-- END BUTTON -->
@@ -129,7 +129,7 @@
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:11%"></div>
                                     </div>
-                                    291 Агрессивный
+                                    291 IPO
                                     <span class="pull-right text-danger text-sm">21,08% <i class="md md-trending-down"></i></span>
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-danger" style="width:93%"></div>
@@ -253,7 +253,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">     Guaranteed  </h5>
+                    <h5 class="modal-title" id="exampleModalLabel">     IPO  </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -262,12 +262,12 @@
                     <!-- BEGIN SPINNERS -->
                     <div class="row">
                         <div class="col-lg-12">
-                            <h4>Гарантированный 100</h4>
+                            <h4> IPO </h4>
                         </div><!--end .col -->
                         <div class="col-lg-3 col-md-4">
                             <article class="margin-bottom-xxl">
                                 <p>
-                                    Гарантированный  - это ... .... .... ... ... ...... .... .... ... ... ..., ...  ...
+                                    IPO  - это ... .... .... ... ... ...... .... .... ... ... ..., ...  ...
                                     ... .... .... ... ... ... ,... .... .... ... ... ...,... .... .... ... ... ...
                                 </p>
                             </article>
