--- a/templates/index/base.html.twig
+++ b/templates/index/base.html.twig
@@ -72,6 +72,12 @@
 
                 <ul class="navbar-nav">
                     <li class="nav-item mx-1">
+                        <a class="nav-link" href="/agreement" title="Соглашение"> Соглашение </a>
+                    </li>
+                </ul>
+
+                <ul class="navbar-nav">
+                    <li class="nav-item mx-1">
                         <a class="nav-link" href="/about" title="О проекте">О проекте</a>
                     </li>
                 </ul>
