--- a/templates/bundles/FOSUserBundle/Profile/show_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/show_content.html.twig
@@ -16,7 +16,12 @@
                         </a>
                     </li>
                 </ul>
+                <div class="input-group input-group-lg form-group">
+                    <span class="input-group-addon"> </span>
+                    <a class="btn btn-default btn-success" href="/profile/edit" role="button"  style=" margin-top: 11px;" >{{ 'edit'|trans }}</a>
+                </div>
             </div><!--end .card-body -->
         </div><!--end .card -->
     </div>
 </div>
+
