--- a/public/materialadmin/assets/css/theme-default/bootstrap.css
+++ b/public/materialadmin/assets/css/theme-default/bootstrap.css
@@ -3088,22 +3088,22 @@ output {
   color: #0c0c0c;
 }
 .form-control {
-  display: block;
+  /*display: block;*/
   width: 100%;
-  height: 35px;
-  padding: 4.5px 14px;
-  font-size: 13px;
-  line-height: 1.846153846;
-  color: #0c0c0c;
-  background-color: #ffffff;
-  background-image: none;
-  border: 1px solid rgba(12, 12, 12, 0.12);
-  border-radius: 2px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  /*height: 35px;*/
+  /*padding: 4.5px 14px;*/
+  /*font-size: 13px;*/
+  /*line-height: 1.846153846;*/
+  /*color: #0c0c0c;*/
+  /*background-color: #ffffff;*/
+  /*background-image: none;*/
+  /*border: 1px solid rgba(12, 12, 12, 0.12);*/
+  /*border-radius: 2px;*/
+  /*-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);*/
+  /*box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);*/
+  /*-webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;*/
+  /*-o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;*/
+  /*transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;*/
 }
 .form-control:focus {
   border-color: #0aa89e;
