--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -1,18 +1,47 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-
 <div class="card contain-sm style-transparent">
     <div class="card-body">
         <div class="row">
-            {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
-            <div class="form-group">
-                {{ form_widget(form) }}
-            </div>
-                <div class="form-group">
-                    <input type="submit" value="{{ 'registration.submit'|trans }}" />
-                </div>
-            {{ form_end(form) }}
 
+            {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
+
+            {% if not form.vars.valid %}
+            <div class="alert alert-danger" role="alert">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span>Error:</span>
+                {{ form_errors(form.email) }}
+                {{ form_errors(form.username) }}
+                {{ form_errors(form.plainPassword.first) }}
+                {{ form_errors(form.plainPassword.second ) }}
+            </div>
+            {% endif %}
+
+            <div class="input-group input-group-lg">
+                <span class="input-group-addon"></span>
+                {{ form_widget(form.email , {'attr': {'class': 'form-control','placeholder':'Email'}}) }}
+            </div>
+            <div class="input-group input-group-lg">
+                <span class="input-group-addon"></span>
+                {{ form_widget(form.username , {'attr': {'class': 'form-control','placeholder':'Username'}}) }}
+            </div>
+            <div class="input-group input-group-lg">
+                <span class="input-group-addon"></span>
+                {{ form_widget(form.plainPassword.first , {'attr': {'class': 'form-control','placeholder':'Password'}}) }}
+            </div>
+
+            <div class="input-group input-group-lg">
+                <span class="input-group-addon"></span>
+                {{ form_widget(form.plainPassword.second , {'attr': {'class': 'form-control','placeholder':' Repeat Password' }}) }}
+            </div>
+
+        <div class="input-group input-group-lg form-group">
+                <span class="input-group-addon"> </span>
+            <input class="btn btn-default btn-success"  style=" margin-top: 11px;"  type="submit" value="{{ 'registration.submit'|trans }}"/>
         </div>
+
+        {{ form_end(form) }}
+
     </div>
+</div>
 </div>
