--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -125,6 +125,7 @@
                         <a href="#" title="Баланс" style="top: 11px;">
                             <span class="badge style-danger pull-right" style="background-color: #3682f4;">
                                 <i class="md md-account-balance-wallet" style="padding-right: 1px; padding-left: 0px; padding-bottom: 1px;"></i>
+                                    Свободные средства
                                     <span id="balance">
                                         {% if user is defined %}
                                             {{ user.balance }}
