--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -5,8 +5,10 @@
         <div class="section-body">
             <div class="row">
 
+
+
                 <!-- BEGIN BUTTON -->
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-4">
                     <div class="card">
                         <button type="button" class=" btn btn-block ink-reaction btn-default-bright"  data-toggle="modal" data-target="#ConservativeModal">
                             Консервативный
@@ -16,7 +18,7 @@
                 <!-- END BUTTON -->
 
                 <!-- BEGIN BUTTON -->
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-4">
                     <div class="card">
                         <button type="button" class=" btn btn-block ink-reaction btn-info " data-toggle="modal" data-target="#AggressiveModal" >Агрессивный</button>
                     </div><!--end .card -->
@@ -24,12 +26,13 @@
                 <!-- END BUTTON -->
 
                 <!-- BEGIN BUTTON -->
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-4">
                     <div class="card">
                         <button type="button" class="btn btn-block ink-reaction btn-warning"  data-toggle="modal" data-target="#IPOModal" >IPO </button>
                     </div><!--end .card -->
                 </div><!--end .col -->
                 <!-- END BUTTON -->
+
 
                 {#<!-- BEGIN ALERT - REVENUE -->#}
                 {#<div class="col-md-3 col-sm-6">#}
@@ -134,11 +137,11 @@
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-danger" style="width:93%"></div>
                                     </div>
-                                    32,301 Баланс
-                                    <span class="pull-right text-success text-sm">0,18% <i class="md md-trending-up"></i></span>
-                                    <div class="progress progress-hairline">
-                                        <div class="progress-bar progress-bar-primary-dark" style="width:63%"></div>
-                                    </div>
+                                    {#32,301 Баланс#}
+                                    {#<span class="pull-right text-success text-sm">0,18% <i class="md md-trending-up"></i></span>#}
+                                    {#<div class="progress progress-hairline">#}
+                                        {#<div class="progress-bar progress-bar-primary-dark" style="width:63%"></div>#}
+                                    {#</div>#}
                                     Свободные средства
                                     <span class="pull-right text-success text-sm">0,18% <i class="md md-trending-up"></i></span>
                                     <div class="progress progress-hairline">
