--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -32,8 +32,10 @@
                 var currencyBalance = currency(App.balance).subtract(idValue)
                 if( currencyBalance >=0) {
                     // $.post( "/admin/ajax/invest", { idValue: idValue, id: id }, function( e ) {
-                        document.getElementById('balance').innerHTML = currency(currencyBalance, { separator: ' ' }).format();
-                        App.balance = currencyBalance;
+                    document.getElementById('balance').innerHTML = currency(currencyBalance, { separator: ' ' }).format();
+                    document.getElementById('available_funds').innerHTML = currency(currencyBalance, { separator: ' ' }).format();
+
+                    App.balance = currencyBalance;
                     $('#' + id + 'Modal').modal('hide');
                     // })
                 } else {
