--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -36,12 +36,12 @@
                     </a>
                 </div>
                 <div class="col-lg-4 p-4">
-                    <a title="Cбалансированный" onclick="" style="cursor:pointer">
+                    <a title="Оптимальный" onclick="" style="cursor:pointer">
                         <div class="card p-4 bg-light border-0 pop-up">
                             <div class="card-block my-3"><img class="img-fluid d-block mb-3 mx-auto" src="/main/img/2.png"
                                                               width="70" alt="windows logo">
-                                <h3 class="mb-4"><b>Умеренный </b></h3>
-                                <p class="border border-primary mx-3 p-2 mb-0"> Умеренный+</p>
+                                <h3 class="mb-4"><b>Оптимальный </b></h3>
+                                <p class="border border-primary mx-3 p-2 mb-0"> Оптимальный+</p>
                             </div>
                         </div>
                     </a>
